# algo-trend

./: .gitignore  MODULE.bazel  README.md  WORKSPACE  build.gradle
src/algo/: Heap.groovy
src/groovy/algo/: BinaryHeap.groovy  FibonacciHeap.java  HeapSort.groovy  MergeSort.groovy  RedBlackTree.groovy  Sorting.groovy
src/groovy/algo/algorithms/: Codility.groovy
src/groovy/algo/datastructures/: BinaryHeap.groovy  FibonacciHeap.java  RedBlackTree.groovy  SimpleTreeElement.java
src/groovy/algo/graphs/: Dijkstra.java  Graph.groovy
src/groovy/algo/other/: Codility.groovy
src/groovy/algo/puzzles/: Codility.java  CrackingCodingInterview.java
src/groovy/algo/sorting/: BinaryHeap.groovy  HeapSort.groovy  Sorting.groovy
src/java/algo/datastructures/: BUILD  BinaryHeap.java  BloomFilter.java  CuckooHashMap.java  FibonacciHeap.java  Graph.java  HyperLogLog.java  InvertibleBloomLookupTable.java  LRUCache.java  OpenAddressingMap.java  SimpleList.java
src/java/algo/puzzles/: AnagramOfPalindrome.java  ArrayRotation.java  BUILD  CheckBinarySearchTree.java  Codility.java  CopyPartOfTheNumber.java  CountryCounter.java  CrackingCodingInterview.java  FindElementFromTheEnd.java  FindLinkedListLoop.java  LineIntersection.java  LinkedListAsNumber.java  MaxProduct.java  MinDistanceCounter.java  RemoveDuplicates.java  ReplaceSpaces.java  SizeOfUnsortedPart.java  StringsRotation.java
test/groovy/algo/: DijkstraTestCase.groovy  HeapTestCase.groovy  RedBlackTreeTestCase.groovy  SortingTestCase.groovy  SortingTestCases.groovy
test/groovy/algo/algorithms/: CodilityTestCase.groovy  (+1 more)
(+265 files in other folders)
